// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InlineQuote/> should match snapshot 1`] = `
<Section
  className="theme--alpha inline-quote"
  contrast={false}
  data-test="component-inline-quote"
  theme={null}
  type="section"
>
  <Container
    className={null}
    fluid={false}
  >
    <Row
      className={null}
      column={false}
      reverse={false}
      row={true}
    >
      <Flex
        auto={false}
        className="flex"
        lg={false}
        md={false}
        sm={false}
        type="div"
        xl={false}
        xs={false}
      >
        <blockquote>
          This is a blockquote
        </blockquote>
      </Flex>
    </Row>
  </Container>
</Section>
`;

exports[`<InlineQuote/> should render with pageTheme instead of module theme 1`] = `
<Section
  className="theme--brand inline-quote"
  contrast={false}
  data-test="component-inline-quote"
  theme={null}
  type="section"
>
  <Container
    className={null}
    fluid={false}
  >
    <Row
      className={null}
      column={false}
      reverse={false}
      row={true}
    >
      <Flex
        auto={false}
        className="flex"
        lg={false}
        md={false}
        sm={false}
        type="div"
        xl={false}
        xs={false}
      >
        <blockquote>
          This is a blockquote
        </blockquote>
      </Flex>
    </Row>
  </Container>
</Section>
`;
